# rtp_io_esp32

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  platformio.ini_  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ad_da.c  di_do.c  g711.c  jbuf.c  rtp_io_main.c  rtp_rx.c  settings.c_  settings.h_  utils.c  wifi_run.c
main/g722/: g722_decode.c
main/include/: ad_da.h  audio_example_file.h  di_do.h  g711.h  jbuf.h  modbus_params.h  rtp_rx.h  tcp_slave.h  utils.h  wifi_run.h
main/include/g722/: g722_decoder.h
main/modbus_tcp/: modbus_params.c  tcp_slave.c
